--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                             <input type="file" id="file1" name="file1"><br>
                             <font color="#FF0000">For best view upload only <b>200*250</b></font><div class="clear"></div>
                             <img src="" id="img1" class="img1" height="100px" width="100px"><br>
+                              <button type="submit" class="btn btn-primary">Submit</button>
                         </div>
 
                        
